--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.4",
     "expo": "^25.0.0",
     "expo-graphics": "^0.0.3",
     "expo-three": "^2.2.2-alpha.1",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.8.0",
     "native-base": "^2.4.1",
     "npm": "^5.7.1",
     "react": "16.2.0",
+    "react-apollo": "^2.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-chart-view": "0.0.1",
+    "react-native-gifted-chat": "^0.4.3",
+    "react-native-highcharts": "^1.0.2",
+    "react-native-svg-charts": "^4.2.0",
     "react-native-websocket": "^1.0.2",
     "react-navigation": "^1.0.0-beta.27",
+    "react-rt-chart": "^1.3.0",
     "three": "^0.91.0"
   },
   "scripts": {
     "start": "react-native-scripts start"
-  }
+  },
+  "devDependencies": {}
 }
