--- a/package.json
+++ b/package.json
@@ -2,28 +2,38 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.4",
-    "expo": "^32.0.0",
-    "expo-graphics": "^0.0.3",
-    "expo-three": "^2.2.2-alpha.1",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.8.0",
-    "native-base": "^2.4.1",
-    "npm": "^5.7.1",
-    "react": "16.5.0",
-    "react-apollo": "^2.1.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "apollo-boost": "^0.4.2",
+    "expo": "^33.0.6",
+    "expo-graphics": "^1.1.0",
+    "expo-three": "^3.0.1",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
+    "native-base": "^2.12.1",
+    "npm": "^6.9.0",
+    "react": "^16.8.6",
+    "react-apollo": "^2.5.6",
+    "react-native": "^0.59.9",
     "react-native-chart-view": "0.0.1",
-    "react-native-gifted-chat": "^0.4.3",
+    "react-native-gifted-chat": "^0.9.6",
     "react-native-highcharts": "^1.0.2",
-    "react-native-svg-charts": "^4.2.0",
+    "react-native-svg-charts": "^5.2.0",
     "react-native-websocket": "^1.0.2",
-    "react-navigation": "^1.0.0-beta.27",
-    "react-rt-chart": "^1.3.0",
-    "three": "^0.91.0"
+    "react-navigation": "^1.6.1",
+    "react-rt-chart": "^2.0.0",
+    "three": "^0.105.2"
   },
   "scripts": {
-    "start": "react-native-scripts start"
+    "open": "open -a Simulator; expo start --ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject",
+    "test": "jest -u",
+    "test1": "jest",
+    "test2": "node_modules/.bin/jest",
+    "test3": "node ./node_modules/jest/bin/jest.js --watchAll",
+    "eslint1": "eslint *.js*",
+    "eslint2": "eslint --fix *.js"
   },
   "devDependencies": {}
 }
