--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "apollo-boost": "^0.4.2",
     "expo": "^33.0.6",
     "expo-graphics": "^1.1.0",
-    "expo-three": "^3.0.1",
+    "expo-three": "^3.0.0-alpha.8",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
     "native-base": "^2.12.1",
-    "npm": "^6.9.0",
+    "npm": "^6.10.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-native": "^0.59.9",
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "open": "open -a Simulator; expo start --ios",
+    "open2": "open -a Simulator; npm start --ios",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
