--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.2",
-    "expo": "^33.0.6",
+    "apollo-boost": "^0.4.3",
+    "expo": "^33.0.7",
     "expo-graphics": "^1.1.0",
-    "expo-three": "^3.0.0-alpha.8",
-    "graphql": "^14.3.1",
+    "expo-three": "^3.0.1",
+    "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "native-base": "^2.12.1",
     "npm": "^6.10.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.6",
-    "react-native": "^0.59.9",
+    "react-apollo": "^2.5.8",
+    "react-native": "^0.60.0",
     "react-native-chart-view": "0.0.1",
-    "react-native-gifted-chat": "^0.9.6",
+    "react-native-gifted-chat": "^0.9.11",
     "react-native-highcharts": "^1.0.2",
-    "react-native-svg-charts": "^5.2.0",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-websocket": "^1.0.2",
-    "react-navigation": "^1.6.1",
+    "react-navigation": "^3.11.0",
     "react-rt-chart": "^2.0.0",
-    "three": "^0.105.2"
+    "three": "^0.106.2"
   },
   "scripts": {
     "open": "open -a Simulator; expo start --ios",
